fixed navbar issues where contact overlaps

--- a/styles.css
+++ b/styles.css
@@ -360,10 +360,7 @@ address {
 /* MEDIA RESPONSIVENESS SECTION */
 @media (max-width: 768px) {
 
-    .mainlogo img {
-        height: 40px;
-        width: 80px;
-    }
+   
 
     .contact-address {
         font-size: 0.83rem;
@@ -380,8 +377,7 @@ address {
     }
 
      .navbar {
-    gap: 20px;
-    width: 100vw;
+    width: 100%;
     justify-content: space-evenly;
     height: 60px;
     }
@@ -402,7 +398,7 @@ address {
     .hero-content {
     grid-template-columns: 1fr;
     padding: 20px;
-    gap: 30px;
+    gap: 70px;
     
     }
 
